# api-gateway/gateway/workspace/routes.py
@@ -303,40 +303,5 @@ async def update_workspace_authorities(
     pass
 
 
-# noinspection PyUnusedLocal
-@router.get(
-    "/v1/workspaces/{workspace_id}/members",
-    response_model=List[UserInfoDto],
-    responses={
-        403: {
-            "description": "Users not found",
-            "model": ErrorDto,
-        },
-        "default": {
-            "description": "Unexpected error",
-            "model": ErrorDto,
-        }
-    },
-    status_code=HTTPStatus.OK,
-    tags=["workspace"],
-    summary="Get users by id",
-    description="Get users by workspace id",
-    operation_id="getUsersByIds",
-)
-@gate_to(
-    method=HTTPMethod.GET,
-    service_url=SERVICE_URL,
-    gateway_path="/v1/workspaces/{workspace_id}/members"
-)
-async def get_users_by_workspace_id(
-        request: Request,
-        response: Response,
-        token: Annotated[str, Depends(bearer_auth_scheme)],
-        workspace_id: Annotated[
-            int, Path(description="ID of a workspace", gt=0, example=123)
-        ]
-):
-    authorities = get_workspace_authorities(workspace_id=workspace_id)
-    ids = get_users_by_ids(ids=authorities)
-    return ids
+
 
