# microservices/workspace/openapi.yaml
@@ -204,33 +204,6 @@ paths:
                 $ref: "../common/openapi.yaml#/components/schemas/ErrorDto"
         default:
           $ref: "../common/openapi.yaml#/components/responses/UnexpectedErrorResponse"
-  /v1/workspaces/{workspaceId}/members:
-    get:
-      description: Get all users by workspace id
-      operationId: getUsersByIds
-      tags:
-        - workspace
-      security:
-        - bearerHttpAuthentication: [ ]
-      parameters:
-        - $ref: "#/components/parameters/WorkspaceId"
-      responses:
-        200:
-          description: "Users found"
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/UserInfoDto"
-        403:
-          description: "Users not found"
-          content:
-            application/json:
-              schema:
-                $ref: "../common/openapi.yaml#/components/schemas/ErrorDto"
-        default:
-          $ref: "../common/openapi.yaml#/components/responses/UnexpectedErrorResponse"
 
 components:
   securitySchemes:
@@ -250,7 +223,6 @@ components:
         type: integer
         format: int64
         example: "3746287468"
-
   requestBodies:
     CreateWorkspaceRequestBody:
       description: Request to create a workspace
